--- a/index.html
+++ b/index.html
@@ -5,5 +5,18 @@
 	</head>
 	<body>
 		<h1>Hello World</h1>
-	</boy>
+	</body>
+	
+	
+<video width="400" controls>
+  <source src="mov_bbb.mp4" type="video/mp4">
+  <source src="mov_bbb.ogg" type="video/ogg">
+  Your browser does not support HTML5 video.
+</video>
+
+<p>
+Video courtesy of 
+<a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+</p>
+ 
 </html>
