--- a/someCss.html
+++ b/someCss.html
@@ -19,6 +19,7 @@
     <p style = "font-family:courier,arial,helvetica;">
         I hope that I am doing the right thing as required! 
         </p>
+	</object>
         
     <img src="https://previews.123rf.com/images/dzmitrock/dzmitrock1709/dzmitrock170900138/87098734-lanterns-in-winter-park-in-the-evening-beautiful-snowfall-for-christmas-snowflakes-fall-on-snow-in-m.jpg" title="Chubby Chowder" style="width:50px;height:50px;margin:5px">
     <img src="https://i.ytimg.com/vi/0gr4dRrAOjU/maxresdefault.jpg" title="Chubby Chowder" style="width:50px;height:50px;margin:5px">
