--- a/someCss.html
+++ b/someCss.html
@@ -19,13 +19,13 @@
     <p style = "font-family:courier,arial,helvetica;">
         I hope that I am doing the right thing as required! 
         </p>
-	</object>
+    </object>
         
     <img src="https://previews.123rf.com/images/dzmitrock/dzmitrock1709/dzmitrock170900138/87098734-lanterns-in-winter-park-in-the-evening-beautiful-snowfall-for-christmas-snowflakes-fall-on-snow-in-m.jpg" title="Chubby Chowder" style="width:50px;height:50px;margin:5px">
-    <img src="https://i.ytimg.com/vi/0gr4dRrAOjU/maxresdefault.jpg" title="Chubby Chowder" style="width:50px;height:50px;margin:5px">
-    <img src="http://cdn.shopify.com/s/files/1/0059/5974/5634/products/product-image-576003983_1200x1200.jpg?v=1547588488" title="Chubby Chowder" style="width:50px;height:50px;margin:20px">
+    <img src="https://i.ytimg.com/vi/0gr4dRrAOjU/maxresdefault.jpg" title="snow" style="width:50px;height:50px;margin:5px">
+    <img src="http://cdn.shopify.com/s/files/1/0059/5974/5634/products/product-image-576003983_1200x1200.jpg?v=1547588488" title="snow" style="width:50px;height:50px;margin:20px">
     
-    <img src="https://steemitimages.com/DQmfKjWjDE4HWBQsD49wJn9dxo2apoEeUUKuyGWXo38jNKD/image.png" alt="Snow" style="width:50px;height:150px;margin:50px">
+    <img src="https://steemitimages.com/DQmfKjWjDE4HWBQsD49wJn9dxo2apoEeUUKuyGWXo38jNKD/image.png" title="snow" style="width:50px;height:150px;margin:150px">
     <div class="centered">SO BEAUTIFUL</div>
     <p class="dotted">This is awesome!</p>
 			
