--- a/someCss.html
+++ b/someCss.html
@@ -2,26 +2,49 @@
 <html>
 
     <style>
+    	.container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
         p.dotted {border-style: dotted;} 
         .centered {
             position: absolute;
-            top: 70%;
+            top: 50%;
             left: 50%;
+            color: yellow;
             transform: translate(-50%, -50%);
           }
+  div.a {
+  width: 150px;
+  height: 50px;
+  background-color: yellow;
+  -ms-transform: rotate(20deg); /* IE 9 */
+  -webkit-transform: rotate(20deg); /* Safari 3-8 */
+  transform: rotate(20deg);
+  
+}
+
+mark {
+  background-color: yellow;
+  color: black;
+}
           </style>
 
 <body>
-    <p> This is the first paragraph as required! 
-        INFO 101 class
-        Section: AD
+    <p> The next paragraph will explain how my creation meet the level of apprentice by explaining each of the required materials in details!
     </p>
     <p style = "font-family:courier,arial,helvetica;">
-        I hope that I am doing the right thing as required! 
+        <mark>First 2 bullets</mark> = pictures with 50 pixels by 50 pixels_______
+        <mark>Third bullet</mark> = an image with 20 pixel margins on each side_______
+        The picture <mark>below the third bullet</mark> = the one with "BEAUTIFUL" in the center_______
+        <mark>Dotted box</mark> with the word "This is awesome" is located just below_______
+        <mark>Unique CSS command</mark> that was not discussed in the workshop is the <mark>yellow rotated box</mark> at the bottom!
         </p>
     </object>
     <li>   
-    <img src="https://previews.123rf.com/images/dzmitrock/dzmitrock1709/dzmitrock170900138/87098734-lanterns-in-winter-park-in-the-evening-beautiful-snowfall-for-christmas-snowflakes-fall-on-snow-in-m.jpg" title="Chubby Chowder" style="width:50px;height:50px;margin:5px">
+    <img src="https://previews.123rf.com/images/dzmitrock/dzmitrock1709/dzmitrock170900138/87098734-lanterns-in-winter-park-in-the-evening-beautiful-snowfall-for-christmas-snowflakes-fall-on-snow-in-m.jpg" title="snow" style="width:50px;height:50px;margin:5px">
     </li>
     <li>   
     <img src="https://i.ytimg.com/vi/0gr4dRrAOjU/maxresdefault.jpg" title="snow" style="width:50px;height:50px;margin:5px">
@@ -29,10 +52,14 @@
 <li>
     <img src="http://cdn.shopify.com/s/files/1/0059/5974/5634/products/product-image-576003983_1200x1200.jpg?v=1547588488" title="snow" style="width:50px;height:50px;margin:20px">
 </li>
+<div class="container">
     <img src="https://steemitimages.com/DQmfKjWjDE4HWBQsD49wJn9dxo2apoEeUUKuyGWXo38jNKD/image.png" title="snow" style="width:250px;height:250px;margin:50px">
-    <div class="centered">SO BEAUTIFUL</div>
+    <div class="centered">BEAUTIFUL</div>
+    </div>
     <p class="dotted">This is awesome!</p>
-			
+	
+    <div class="a">A yellow rotated BOX!</div>
+<br>
         
  
 </body>
